Fixed horizontal overflow on questions page

--- a/software_ethics_quiz/src/styles/questions.css
+++ b/software_ethics_quiz/src/styles/questions.css
@@ -8,9 +8,8 @@
     background-color: #9581E0;
     border-bottom-right-radius: 100% 170%;
     border-bottom-left-radius: 100% 170%;
-    width: 106%;
+    width: 100%;
     position: absolute;
-    left: -3%;
     color: #FFFFFF;
     text-align: center;
     z-index: 2;
@@ -18,6 +17,18 @@
     flex-direction: row;
     justify-content: center;
 }
+/* .questionsHeader {
+    height: 160px;
+    background-image: url("../assets/adsas-removebg.png");
+    background-position: center;
+    background-size: cover;
+    color: #FFFFFF;
+    text-align: center;
+    z-index: 2;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+} */
 
 .questionsHeaderCentreColumn {
     display: flex;
